# eidoscope

./: .gitignore  Cargo.toml
crates/eidoscope_ingestor/: Cargo.toml
crates/eidoscope_ingestor/examples/: comprehensive_integration.rs
crates/eidoscope_ingestor/src/: error.rs  lib.rs
crates/eidoscope_ingestor/src/message/: id.rs  metadata.rs  mod.rs
crates/eidoscope_ingestor/src/pipeline/: builder.rs  mod.rs
crates/eidoscope_ingestor/src/processor/: decision.rs  mod.rs  passthrough.rs
crates/eidoscope_ingestor/src/sink/: mod.rs  tracing_sink.rs
crates/eidoscope_ingestor/tests/: error.rs  lib.rs
crates/eidoscope_ingestor/tests/common/: fixtures.rs  mod.rs  processors.rs  sinks.rs
crates/eidoscope_ingestor/tests/message/: id.rs  metadata.rs  mod.rs
crates/eidoscope_ingestor/tests/pipeline/: builder.rs  mod.rs
crates/eidoscope_ingestor/tests/processor/: decision.rs  mod.rs  passthrough.rs
crates/eidoscope_ingestor/tests/sink/: mod.rs  tracing_sink.rs
crates/eidoscope_stream_processor/: Cargo.toml  README.md
crates/eidoscope_stream_processor/examples/: end_to_end_stream.rs
crates/eidoscope_stream_processor/src/: error.rs  lib.rs  processor.rs
crates/eidoscope_stream_processor/src/consumer/: channel.rs  mod.rs
crates/eidoscope_stream_processor/tests/: lib.rs  processor.rs
