[package]
name = "eidoscope_ingestor"
version.workspace = true
edition.workspace = true
autotests = false

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[test]]
name = "integration"
path = "tests/lib.rs"

[lints]
workspace = true
