[package]
name = "eidoscope_stream_processor"
version.workspace = true
edition.workspace = true
autotests = false

[dependencies]
eidoscope_ingestor = { path = "../eidoscope_ingestor" }
thiserror = "2"
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync"] }
tracing-subscriber = "0.3"

[[test]]
name = "integration"
path = "tests/lib.rs"

[lints]
workspace = true
